csss-site/src/logs/2020_04_01_02_21_36_csss_site.log
2020-04-01 02:21:36 = INFO - [settings.py] BASE_DIR set to /home/ryan/Desktop/SFU/CSSS_Site/csss-site/csss-site/src
2020-04-01 02:21:36 = INFO - [settings.py] DEBUG set to True
2020-04-01 02:21:36 = INFO - [settings.py] HOST_ADDRESS set to *
2020-04-01 02:21:36 = INFO - [settings.py] ALLOWED_HOSTS set to ['*']
2020-04-01 02:21:36 = INFO - [settings.py] ROOT_DIR set to /home/ryan/Desktop/SFU/CSSS_Site/csss-site
2020-04-01 02:21:36 = INFO - [settings.py] STATIC_URL set to /STATIC_URL/
2020-04-01 02:21:36 = INFO - [settings.py] STATIC_ROOT set to /home/ryan/Desktop/SFU/CSSS_Site/csss-site/csss-site/src/static_root/
2020-04-01 02:21:36 = INFO - [settings.py] MEDIA_URL set to /MEDIA_URL/
2020-04-01 02:21:36 = INFO - [settings.py] MEDIA_ROOT set to /home/ryan/Desktop/SFU/CSSS_Site/csss-site/csss-site/src/media_root/
2020-04-01 02:21:36 = INFO - [settings.py] FILE_FORM_MASTER_DIR set to form_uploads/form_uploads/
2020-04-01 02:21:36 = INFO - [settings.py] FILE_FORM_UPLOAD_DIR set to form_uploads/form_uploads/temporary_files/
2020-04-01 02:21:36 = INFO - [settings.py] DJANGO_MAILBOX_ATTACHMENT_UPLOAD_TO set to mailbox_attachments/%Y/%m/%d/
2020-04-01 02:21:36 = WARNING - Watching for file changes with StatReloader

2020-04-01 02:21:36 = INFO - Performing system checks...


2020-04-01 02:21:36 = WARNING - Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/usr/lib/python3.7/threading.py", line 926, in _bootstrap_inner
    self.run()
  File "/usr/lib/python3.7/threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/utils/autoreload.py", line 54, in wrapper
    fn(*args, **kwargs)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/core/management/commands/runserver.py", line 117, in inner_run
    self.check(display_num_errors=True)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/core/management/base.py", line 390, in check
    include_deployment_checks=include_deployment_checks,
  File "/home/ryan/.local/lib/python3.7/site-packages/django/core/management/base.py", line 377, in _run_checks
    return checks.run_checks(**kwargs)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/core/checks/registry.py", line 72, in run_checks
    new_errors = check(app_configs=app_configs)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/core/checks/urls.py", line 40, in check_url_namespaces_unique
    all_namespaces = _load_all_namespaces(resolver)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/core/checks/urls.py", line 57, in _load_all_namespaces
    url_patterns = getattr(resolver, 'url_patterns', [])
  File "/home/ryan/.local/lib/python3.7/site-packages/django/utils/functional.py", line 80, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/urls/resolvers.py", line 584, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/utils/functional.py", line 80, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/home/ryan/.local/lib/python3.7/site-packages/django/urls/resolvers.py", line 577, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/lib/python3.7/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/ryan/Desktop/SFU/CSSS_Site/csss-site/csss-site/src/csss/urls.py", line 4, in <module>
    from . import views
  File "/home/ryan/Desktop/SFU/CSSS_Site/csss-site/csss-site/src/csss/views.py", line 73
    for(message in messages_to_display):
                                       ^
SyntaxError: invalid syntax

2020-04-01 02:21:43 = WARNING - /home/ryan/Desktop/SFU/CSSS_Site/csss-site/csss-site/src/csss/views.py changed, reloading.

